--- a/Fekrah/API/ClientApp/src/app/core/Shared/components/promo-ticker/promo-ticker.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/Shared/components/promo-ticker/promo-ticker.component.scss
@@ -1,8 +1,8 @@
 .promo-ticker {
-  background: #febd69;
+  background: linear-gradient( #ffdfa5 0%, #ffc775 100%);
   overflow: hidden;
   white-space: nowrap;
-  padding: 10px 0;
+  padding: 5px 0;
 
   .ticker-wrap {
     width: 100%;
@@ -18,15 +18,15 @@
 
   .ticker-item {
     display: inline-block;
-    padding: 8px 20px;
+    padding: 4px 10px;
     margin-right: 30px;
     background: white;
     color: #333;
-    border-radius: 20px;
+    border-radius: 10px;
     font-weight: bold;
     text-decoration: none;
     font-size: 16px;
-    transition: background 0.3s;
+    transition: background 0.9s;
 
     &:hover {
       background: #f3a847;
